--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -34,13 +34,13 @@
           {
             <ul class="navbar-nav flex-grow-1">
               <li class="nav-item">
-                <a class="nav-link text-dark" asp-controller="Model" asp-action="HandleModels">Manage models</a>
+                <a class="nav-link text-dark" asp-controller="Model" asp-action="HandleModels">Models</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-dark" asp-controller="Supplier" asp-action="HandleSupplier">Handle suppliers</a>
+                <a class="nav-link text-dark" asp-controller="Material" asp-action="ManageMaterial">Material</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-dark" asp-controller="Material" asp-action="ManageMaterial">Manage materials</a>
+                <a class="nav-link text-dark" asp-controller="Supplier" asp-action="HandleSupplier">Suppliers</a>
               </li>
             </ul>
             <ul class="navbar-nav ml-auto">
