--- a/Views/Order/OrderHistory.cshtml
+++ b/Views/Order/OrderHistory.cshtml
@@ -18,7 +18,7 @@
                 <button type="submit">Choose</button>
             </form>
                 <div class="form-group">
-                <form method="post" asp-action="orderHistoryPdf">
+                <form method="post" asp-action="AllOrderHistoryPdf">
                     @if(Model.DateFrom !=null && Model.DateTo != null)
                     {
                         <input asp-for="DateFrom" type="hidden" id="dateFrom" name="dateFrom" value=@ViewBag.OrderDateFrom />
@@ -27,14 +27,16 @@
                     <table class="table table-striped">
                         <thead>
                             <tr>
+                                <th scope="col">Orderid</th>
                                 <th scope="col">Orderdate</th>
                                 <th scope="col">Modelid</th>
                                 <th scope="col">Modelname</th>
                                 <th scope="col">Price</th>
                                 <th scope="col">Status</th>
-                                <th scope="col">Total amount</th>
-                                <th scope="col"></th>
-                                <th scope="col"></th>
+                                <th scope="col">Customerid</th>
+                                <th scope="col">Customer Name</th>
+                                <th scope="col">Print order</th>
+
                             </tr>
                         </thead>
                         <tbody>
@@ -48,6 +50,7 @@
                                 foreach (var hats in order.Hats)
                                 {
                                     <tr>
+                                        <td>@order.ID</td>
                                         <td>@order.OrderDate</td>
                                         @if (hats.Model == null)
                                         {
@@ -57,11 +60,31 @@
                                         {
                                             <td>@hats.Model.ID</td>
                                             <td>@hats.Model.ModelName</td>
+                                            <td>@hats.Price</td>
+                                            <td>@order.Status</td>
+                                            <td>@order.CustomerID</td>
+
+                                                @foreach (var customer in ViewBag.CurrentCustomer)
+                                                {                                                    
+                                                    @if (customer.ID.Equals(order.CustomerID))
+                                                    {
+                                                        <td>@customer.FirstName @customer.LastName</td>
+
+                                                    }
+                                                 }
+
+
+                                                <td>
+                                                    <form method="post" asp-action="PrintOneOrderHistory">
+                                                        <input type="hidden" name="orderId" value="@order.ID" />
+                                                        <button type="submit" class="btn btn-primary btn-sm">Get PDF</button>
+                                                    </form>
+                                                </td>
+                                               
 
 
                                         }
-                                        <td>@hats.Price</td>
-                                        <td>@order.Status</td>
+                                      
                                     </tr>
                                 }
                             }
