--- a/wwwroot/css/CartOverview.css
+++ b/wwwroot/css/CartOverview.css
@@ -64,13 +64,22 @@
     border-radius: 5px;
     cursor: pointer;
 }
+.remove-button {
+    background-color: darkred;
+    color: white;
+    border: none;
+    padding: 5px 10px;
+    margin-right: 5px;
+    border-radius: 5px;
+    cursor: pointer;
+}
 
 .edit-button {
     background-color: blue;
     color: white;
     border: none;
     padding: 5px 10px;
-    margin-right: 5px;
+    margin-left: 5px;
     border-radius: 5px;
     cursor: pointer;
 }
