--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -56,7 +56,7 @@
           {
             <ul class="navbar-nav flex-grow-1">
               <li class="nav-item">
-                <a class="nav-link text-dark" asp-area="" asp-controller="Order" asp-action="OrderForm">Order Form</a>
+                <a class="nav-link text-dark" asp-area="" asp-controller="Model" asp-action="OurModels">Our Models</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-dark" asp-area="" asp-controller="Order" asp-action="SpecialOrderForm">Special
