--- a/Views/Material/PlaceMaterialOrder.cshtml
+++ b/Views/Material/PlaceMaterialOrder.cshtml
@@ -1,7 +1,7 @@
 <h4>Your order has been successfully placed!</h4>
 
 <div>
-    <h5>Order Details:</h5>
+    <h5>Order details:</h5>
     <ul>
         <li><strong>Material:</strong> @ViewBag.Material.Name</li>
         <li><strong>Amount:</strong> @ViewBag.Amount</li>
@@ -9,7 +9,8 @@
 </div>
 
 <p>
-    Thank you for placing your order with us. We have received your request for @ViewBag.Amount units of @ViewBag.Material.Name.
+    Thank you for placing your order with us. We have received your request for @ViewBag.Amount @ViewBag.Material.Unit
+    of @ViewBag.Material.Name.
     An email confirmation has been sent to @ViewBag.Supplier.Email with your order details for processing.
 </p>
 
@@ -20,4 +21,12 @@
 
 <p>
     Thank you for choosing us. We appreciate your business!
+</p>
+
+<p>
+    Best regards,
+    <br />
+    @ViewBag.Supplier.Name
+    <br />
+    Any questions? Call us on: @ViewBag.Supplier.TelephoneNumber
 </p>
