--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -42,6 +42,9 @@
               <li class="nav-item">
                 <a class="nav-link text-dark" asp-controller="Material" asp-action="ManageMaterial">Manage materials</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link text-dark" asp-controller="Order" asp-action="OrderHistory">Order history</a>
+              </li>
             </ul>
             <ul class="navbar-nav ml-auto">
               <li class="nav-item">
