--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -9,14 +9,14 @@
  </div>
 <div class="gallery">
   <div class="hat">
-    <img src="~/Pictures/HattarBild2.jpg" alt="Image of leather hat">
+    <img src="~/Pictures/LeatherHat.png" alt="Image of leather hat">
     <div class="info">
       <h2>Leather Hat</h2>
       <p>A beautiful hat of the highest quality.</p>
     </div>
   </div>
   <div class="hat">
-    <img src="~/Pictures/HattarBild.jpg" alt="Image of doctor's hat">
+    <img src="~/Pictures/DoctorsHat.png" alt="Image of doctor's hat">
     <div class="info">
       <h2>Doctor's Hat</h2>
       <p>A classic doctor's hat for elegant occasions.</p>
@@ -32,7 +32,7 @@
   </div>
  
 </div>
-<div class="text-container">
+<div class="text-container text-center">
 
     <br />
     <p>
