--- a/wwwroot/css/OurModels.css
+++ b/wwwroot/css/OurModels.css
@@ -20,7 +20,7 @@
     .hats img {
         width: 100%;
         height: auto;
-        max-height: 200px;
+        max-width: 200px;
         border-radius: 5px;
     }
 
