--- a/Views/Order/ListOrders.cshtml
+++ b/Views/Order/ListOrders.cshtml
@@ -1,6 +1,10 @@
 ﻿@model List<Order>;
 <link rel="stylesheet" href="~/css/IncomingOrder.css">
+<div class="order-site">
 <div class="orderbox">
+    <div class="order-info">
+        <h2>Orderrequests</h2>
+    </div>
     @foreach(var Order in Model.Where(o=>o.Status.Equals("Pending") && !o.IsApproved))
     {
         <div class="order">
@@ -16,6 +20,9 @@
 <div class="container text-center">
     <div class="row align-items-center">
         <div class="col orderbox">
+                <div class="order-info">
+                    <h2>Confirmed Orders</h2>
+                </div>
             @foreach(var Order in Model.Where(o=>o.Status.Equals("Confirmed")))
             {
                 <div class="order">
@@ -28,6 +35,9 @@
             }
         </div>
         <div class="col orderbox">
+                <div class="order-info">
+                    <h2>Orders in Progress</h2>
+                </div>
            @foreach(var Order in Model.Where(o=>o.Status.Equals("InProgress")))
             {
                 <div class="order">
@@ -40,6 +50,9 @@
             }
         </div>
         <div class="col orderbox">
+                <div class="order-info">
+                    <h2>Ready for Delivery</h2>
+                </div>
             @foreach (var Order in Model.Where(o => o.Status.Equals("ReadyForDelivery")))
             {
                 <div class="order">
@@ -53,6 +66,9 @@
     </div>
 </div>
 <div class="orderbox">
+        <div class="order-info">
+            <h2>Declined Orders to Handle</h2>
+        </div>
     @foreach (var Order in Model.Where(o => o.Status.Equals("Declined")))
     {
         <div class="order">
@@ -63,4 +79,5 @@
 
         </div>
     }
+</div>
 </div>
