--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -49,7 +49,7 @@
                 <a class="nav-link text-dark" asp-controller="Order" asp-action="OrderHistory">Order history</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-dark" asp-controller="Order" asp-action="OrderCustomer">Order for customer</a>
+                <a class="nav-link text-dark" asp-controller="Order" asp-action="AdminOrderCustomer">Order for customer</a>
               </li>
             </ul>
             <ul class="navbar-nav ml-auto">
