--- a/Views/Order/PlaceOrderForCustomer.cshtml
+++ b/Views/Order/PlaceOrderForCustomer.cshtml
@@ -3,9 +3,9 @@
 <h1 style="color: rgb(4, 249, 4);">ORDER CONFIRMED</h1>
 <div>
     <div>
-        <h4>Your order has been placed.</h4>
+        <h4>The order for the customer has been placed.</h4>
         <p>Estimated delivery date: @Model.EstimatedDeliveryDate</p>
         <p>Status: @Model.Status</p>
-        <p>Order sum: @Model.OrderSum</p>
+        <p>Order sum: @ViewBag.TotalSum</p>
     </div>
 </div>
