special-order-for-customer

--- a/Views/Admin/AdminOrderCustomer.cshtml
+++ b/Views/Admin/AdminOrderCustomer.cshtml
@@ -15,7 +15,7 @@
         <img src="@models.ImagePath" alt="Image of hat">
         <div class="info">
             <h2 class="ModelName">@models.ModelName</h2>
-            <a asp-action="HatOrderForCustomer" asp-controller="Order" asp-route-modelID="@models.ID" class="SeeProduct">See product</a>
+            <a asp-action="HatOrderForCustomer" asp-controller="Admin" asp-route-modelID="@models.ID" class="SeeProduct">See product</a>
         </div>
 
     </div>
