--- a/Views/Admin/HatOrderForCustomer.cshtml
+++ b/Views/Admin/HatOrderForCustomer.cshtml
@@ -19,7 +19,7 @@
                     }
                 </ul>
             }
-            <form asp-action="AdminCustomerOrderInfo" asp-controller="Order" method="get">
+            <form asp-action="AdminCustomerOrderInfo" asp-controller="Admin" method="get">
                 <input type="hidden" asp-for="modelID" />
                 <div class="form-group">
                     <label for="Size">Size: </label>
