--- a/Views/Admin/AdminCustomerOrderInfo.cshtml
+++ b/Views/Admin/AdminCustomerOrderInfo.cshtml
@@ -57,7 +57,7 @@
     <input type="hidden" asp-for="@Model.ModelID" value="@ViewBag.SelectedModel.ID">
     <input type="hidden" asp-for="@Model.Size" value="@ViewBag.Size">
     <input type="hidden" asp-for="@Model.Price" value="@ViewBag.Price">
-    <button type="submit" class="btn btn-success btn-primary mt-4" asp-controller="Order"
+    <button type="submit" class="btn btn-success btn-primary mt-4" asp-controller="Admin"
         asp-action="PlaceOrderForCustomer">Place
         order</button>
 </form>
